feat: components added, hooks, main page completed

--- a/frontend/app/globals.scss
+++ b/frontend/app/globals.scss
@@ -16,8 +16,8 @@
     --primary-border: #4ade80;
   
 
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: #4ade80;
+    --secondary: #f3f4f6;
+    --secondary-foreground: #a1a1aa;
 
     --red: #ef4444;
     --red-foreground: #ffffff;
