--- a/frontend/app/[name]/page.module.scss
+++ b/frontend/app/[name]/page.module.scss
@@ -2,8 +2,12 @@
   @apply flex flex-col items-center border border-border;
 }
 
+.imageWrapper {
+  @apply relative w-full flex justify-center;
+}
+
 .image {
-  @apply flex flex-1 min-w-[300px] max-h-[300px] md:min-w-[500px] md:max-h-[500px] px-4 py-8;
+  @apply flex max-w-[300px] max-h-[300px] md:min-w-[500px] md:max-h-[500px] px-4 py-8;
   transition: transform 0.8s ease;
 
   img {
